[package]
name = "greeter-reuseport"
version = "0.1.0"
authors = ["FUJITA Tomonori <fujita.tomonori@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num_cpus = "1.0"
socket2 = { version="0.4", features = ["all"]}
tokio = { version = "1.10", features = ["full"] }
tokio-stream = { version = "0.1", features = ["net"] }
nix = "*"
tonic = "0.5"
prost = "0.8"

[build-dependencies]
tonic-build = "0.5"
